@@ -1,3 +1,12 @@
+2011-01-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/bdt.R: Added a few accessor functions for R
+
+	* src/RcppBDT.cpp: Added fromDate() setter
+
+	* R/zzz.R: Make both date module and a class global
+	* demo/RcppBDT.R: Adapted demo accordingly
+
 2011-01-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/Makevars.win: Added -I$(BOOSTLIB)
